fix (number input): add controlled behavior - add controlled behavior, overwrite react number format - fix min max handler - add jsdoc/comments

--- a/registry/src/components/NumberInput/index.css
+++ b/registry/src/components/NumberInput/index.css
@@ -28,7 +28,7 @@
   @apply flex h-full items-center gap-2;
 }
 
-.input-wrapper input.cross-stepper {
+.input-wrapper input.separate-stepper {
   @apply text-center;
 }
 
