--- a/registry/src/components/theme/alias/text-icon-colors.css
+++ b/registry/src/components/theme/alias/text-icon-colors.css
@@ -7,6 +7,7 @@
   --par-color-text-secondary-inverse: var(--par-gray-200);
 
   --par-color-text-helper-neutral: var(--par-gray-550);
+  --par-color-text-helper-neutral-disabled: rgb(from var(--par-gray-550) r g b / 0.5);
   --par-color-text-helper-adverse: var(--par-red-550);
   --par-color-text-helper-cautionary: var(--par-yellow-550);
   --par-color-text-helper-affirmative: var(--par-green-550);
@@ -41,6 +42,7 @@
   --par-color-text-secondary-inverse: var(--par-gray-700);
 
   --par-color-text-helper-neutral: var(--par-gray-200);
+  --par-color-text-helper-neutral-disabled: rgb(from var(--par-gray-200) r g b / 0.5);
   --par-color-text-helper-adverse: var(--par-red-200);
   --par-color-text-helper-cautionary: var(--par-yellow-200);
   --par-color-text-helper-affirmative: var(--par-green-200);
