--- a/registry/src/components/Radio/index.css
+++ b/registry/src/components/Radio/index.css
@@ -1,5 +1,5 @@
 /* Override browser's default radio input */
-input[type='radio'].par-input {
+input[type='radio'].par-radio {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -8,29 +8,17 @@ input[type='radio'].par-input {
   height: 1rem;
   padding: 0;
   outline: unset !important;
-  border: 0.125rem solid #a8a8a8;
   position: relative;
-  top: 0.125rem;
-  transition: all 150ms ease-in-out;
-  background-color: white;
+  background-color: var(--par-transparent);
+  border: none;
 }
 
-input[type='radio'].par-input:not(:disabled):not(:checked):hover {
-  border: 0.125rem solid #4294ff;
+input[type='radio'].par-radio:checked {
+  @apply border-transparent bg-transparent text-transparent;
 }
 
-input[type='radio'].par-input:checked {
-  border: 0.3125rem solid #4294ff;
-}
-
-input[type='radio'].par-input:disabled {
-  pointer-events: none;
+input[type='radio'].par-radio:disabled {
   cursor: not-allowed;
-  opacity: 0.5;
-}
-
-input[type='radio'].par-input:disabled:checked {
-  border: 0.3125rem solid #4294ff;
 }
 
 .radio-wrapper {
@@ -47,6 +35,14 @@ input[type='radio'].par-input:disabled:checked {
 
 .radio-wrapper .input-label-wrapper {
   @apply p-0;
+}
+
+.radio-input {
+  @apply relative my-1 flex h-fit w-fit items-center justify-center;
+}
+
+.radio-icon {
+  @apply absolute left-1/2 top-1/2 h-4 w-4 -translate-x-1/2 -translate-y-1/2 rounded-sm p-0;
 }
 
 .input-label {
