--- a/registry/src/components/Menu/index.css
+++ b/registry/src/components/Menu/index.css
@@ -4,7 +4,7 @@
 
 .menu-header,
 .menu-footer {
-  @apply h-10 shrink-0 truncate border-[var(--par-color-border-surface)] py-1;
+  @apply h-10 shrink-0 truncate border-[var(--par-color-border-surface)];
 }
 
 .menu-header {
